2003/12/10 12:45 (-0500) muppetman

	* Subclass.pm: updated doc

	* GType.xs: fix memory corruption problem in register_enum and 
	register_flags by duping and leaking the value names.  there appears
	to be no way to clean up that memory, unfortunately.
	also moved those two xsubs up in the file to appear immediately
	after register_object in the docs, and added examples to their docs.
	move the existing register to register_object, since that's all it
	does.  created a new function named register, which acts as a 
	traffic-cop, calling the proper helper function based on the type
	from which you are attempting to derive.  this would've been easier
	to do in Perl, but then getting the doc into the right place would
	require a rather large tearup of Glib::ParseXSDoc.

	* TODO: a few of these are completed, now.

2003/12/10 12:02 (-0500) rwmcfa1

	* t/c.t: initial import, tests out the new register_enums|flags code

2003/12/09 13:26 (-0500) rwmcfa1

	* GType.xs: another pass at getting things going. created 
	sanitize_package_name, used it where app.

2003/12/08 22:44 (-0500) rwmcfa1

	* GType.xs: implemented first pass at register_enum and register_flags

2003/12/08 11:08 (-0500) muppetman

	* GenPod.pm: add default translation for stdio FILE => "file handle"

2003/12/08 09:44 (-0500) rwmcfa1

	* t/6.t: use strict and warnings, b/c newer Test::More do anyway, 
	required a few minor syntax changes to work.

2003/12/04 13:07 (-0500) rwmcfa1

	* MakeHelper.pm: @ARGV is now searched for disable-apidoc which,
	surprise, disables the generation of the api doc pods thus speeding up
	the build process.

2003/12/04 00:12 (-0500) muppetman

	* Glib.pm: credit where credit is due
	* Glib.pm: bump version to 1.030 to keep cvs head ahead of the
	stable series.

2003/12/02 23:49 (-0500) rwmcfa1

	* : Merged from rel-1-02-branch

	* GenPod.pm: implement a sorter function that pushes GObject based pkgs
	to the front, instead of alpha. this is so that all classes will be